# PySpark-DeltaLake-OpenFoodFacts-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_minimal.py
.github/workflows/: ci.yml
notebooks/: 01_exploration.ipynb  Exploration.ipynb  Inspection.ipynb
pipeline/: ingestion.py  run.py  silver.py
src/: config.py
test/: conftest.py  testConfig.py  test_ingestion.py  test_silver.py
