[tool.poetry]
name = "lakehouse-openfoodfacts"
version = "0.1.0"
description = "a data engineering project with PySpark and Delta Lake"
authors = ["Eazenli <yizhenli233@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^4.1.1"
delta-spark = "^4.2.0"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
