[tool.poetry]
name = "lakehouse-openfoodfacts"
version = "0.1.0"
description = "a data engineering project with PySpark and Delta Lake"
authors = ["Eazenli <yizhenli233@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyspark = "^3.5.3"
delta-spark = "^3.3.0"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"
pyarrow = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
